--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,14 @@ dependencies:
 
   carousel_slider: ^4.0.0
 
+  fl_paging: ^2.1.1
+
+  flutter_lorem: ^2.0.0
+
+  expandable_text: ^2.2.0
+
+  share: ^2.0.4
+
 
 dev_dependencies:
   flutter_test:
