--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
 
   share: ^2.0.4
 
+  path_provider: ^2.0.4
+
 
 dev_dependencies:
   flutter_test:
@@ -54,3 +56,4 @@ flutter:
   assets:
     - assets/icons/
     - assets/images/
+    - assets/database/
