add supabase register & update android compile version to 31

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,10 @@ dependencies:
 
   path_provider: ^2.0.4
 
+  flutter_screenutil: ^5.5.3+2
+
+  supabase: ^0.3.4
+
 
 dev_dependencies:
   flutter_test:
